[package]
name = "cargo-is-tested"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.107", features = ["full", "extra-traits", "parsing"]}
clap = { version = "4.0.32", features = ["derive"]}
if_chain = "1.0.2"
colored = "2.0.0"
proc-macro-error = { version = "1.0.4" }

[workspace]
members = ["is_tested", "testing"]