[package]
name = "cargo-is-tested"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ensure that your items are checked with high-quality testing!"
repository = "https://github.com/blyxyas/cargo-is-tested"
documentation = "https://blyxyas.github.io/cargo-is-tested"
readme = "readme.md"
keywords = ["testing", "test", "binary", "cargo-subcommand", "cargo"]
categories = [
	"command-line-utilities",
	"development-tools",
	"development-tools::testing",
]

include = ["src", "Cargo.toml", "Cargo.lock", "readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features = ["full", "extra-traits", "parsing"] }
clap = { version = "4.0.32", features = ["derive"] }
if_chain = "1.0.2"
colored = "2.0.0"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
strsim = { version = "0.10.0", optional = true }

[features]
default = ["suggestions"]
suggestions = ["dep:strsim"]

[workspace]
members = ["is_tested", "is_not_tested", "testing"]

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0.46" # Syn's version of proc-macro2

