[package]
name = "is_not_tested"
version = "0.1.0"
edition = "2021"
description = "Helper attribute for `cargo-is-tested`, along with `is_tested`"
license = "MIT"
repository = "https://github.com/blyxyas/cargo-is-tested/tree/master/is_not_tested"
readme = "README.md"
keywords = ["proc-macro", "testing", "test", "marker", "helper"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.2"
syn = "1.0.107"

[lib]
proc-macro = true
