[package]
name = "is_tested"
version = "0.1.0"
edition = "2021"
description = "Helper attribute for `cargo-is-tested`, along with `is_not_tested`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"]}
proc-macro-error = "1.0.4"